...
 * ======================================================================= */

// Object holding test tags for UI testing purposes.
object SessionTestTags {
  const val LOCATION_PICKER_DIALOG = "location_picker_dialog"
  const val LOCATION_PICKER_BUTTON = "location_picker_button"
  const val TITLE = "session_title"
  const val PROPOSED_GAME = "proposed_game"
  const val MIN_PLAYERS = "min_players"
  const val MAX_PLAYERS = "max_players"
  const val PARTICIPANT_CHIPS = "participant_chips"
  const val ADD_PARTICIPANT_BUTTON = "add_participant_button"
  const val ADD_PARTICIPANT_SEARCH = "add_participant_search"
  const val DISCRETE_PILL_SLIDER = "discrete_pill_slider"
  const val DATE_FIELD = "date_field"
  const val TIME_FIELD = "time_field"
  const val LOCATION_FIELD = "location_field"
  const val LOCATION_FIELD_ITEM = "location_field_item"
  const val QUIT_BUTTON = "quit_button"
  const val DATE_PICKER_OK_BUTTON = "date_picker_ok_button"
  const val DATE_PICK_BUTTON = "date_pick_button"
  const val TIME_PICK_BUTTON = "time_pick_button"
  const val TIME_PICKER_OK_BUTTON = "time_picker_ok_button"
  const val DELETE_SESSION_BUTTON = "delete_session_button"

  fun chipsTag(uid: String) = "chip${uid}"

  fun addParticipantTag(uid: String) = "add_participant_item:${uid}"

  fun removeParticipantTag(uid: String) = "remove:${uid}"
...
