...
  const val SNACKBAR_HOST = "add_session_snackbar_host"

  // Content
  const val CONTENT_COLUMN = "add_session_content_column"

  // Title field
  const val FORM_TITLE_FIELD = "add_session_title_field"

  // Sections
  const val GAME_SEARCH_ERROR = "add_session_game_search_error"
  const val PARTICIPANTS_SECTION = "add_session_participants_section"
  const val ORG_SECTION = "add_session_organisation_section"

...
